Yet another stab at preventing signals from changelog-fetching KJobs that return during a cache reload and crashing us. This time it really, really should be fixed, since we're manually taking the deletion of the KJob in our hands (instead of relying on its auto delete function) to ensure that before we go down for a cache reload, we kill the KJob *dead*.

BUG:301161
FIXED-IN:2.0